--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -6,7 +8,6 @@
   position: absolute;
   width: 100%;
   z-index: 1;
-  //! padding
   &::before {
     z-index: -1;
     content: '';
@@ -18,7 +19,7 @@
     transition: opacity 150ms ease 0s;
     width: 100%;
     opacity: 0.5;
-    background-image: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0));
+    background-image: linear-gradient($black, rgba($white, 0));
   }
 }
 
@@ -28,5 +29,4 @@
   width: 60px;
   height: 32px;
   font-weight: bold;
-  margin-left: 80px;
 }
