--- a/src/components/Main/styles.scss
+++ b/src/components/Main/styles.scss
@@ -1,12 +1,17 @@
+@import '../../variables';
+$grey-07: rgba(
+  $color: $grey,
+  $alpha: 0.7,
+);
 .hero {
   position: relative;
-  padding: 300px 0 50px 50px;
+  padding: 300px 40px 50px 50px;
   background-image: url('https://images.unsplash.com/photo-1509062522246-3755977927d7');
   background-repeat: no-repeat;
   display: flex;
   justify-content: flex-end;
   background-position: center;
-  height: 80vh;
+  height: 100vh;
   z-index: 0;
   &__filter-box {
     position: absolute;
@@ -14,42 +19,46 @@
     right: 0;
     top: 0;
     bottom: 0;
-    background-color: #8d48b5;
+    background-color: $purple;
     opacity: 0.1;
     z-index: 1;
   }
   &__box {
     position: relative;
-    max-width: 800px;
+    max-width: 850px;
+    max-height: 616px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-end;
     z-index: 2;
+    text-align: right;
   }
   &__call-action {
-    font-size: 25px;
+    font-size: 30px;
   }
   &__main-text {
     font-size: 60px;
   }
   &__btn {
+    cursor: pointer;
     text-align: center;
     border: none;
     color: inherit;
-    background: #8d48b5;
-    opacity: 0.85;
-    border-radius: 52px;
+    background: $purple;
+    opacity: 0.7;
+    border-radius: 50px;
     padding: 12px 30px;
   }
   span {
     font-weight: bold;
-    color: #8d48b5;
+    color: $purple;
   }
 }
 
+// Todo considerar herencia de estilo del borde raro ese
 .about-us {
-  color: #000;
+  color: $black;
   font-size: 30px;
   height: 60vh;
   display: flex;
@@ -73,8 +82,8 @@
     width: 960px;
     margin: 0 auto;
     padding: 70px 45px;
-    border: #8d48b5 8px solid;
-    border-radius: 30px;
+    border: $purple 8px solid;
+    border-radius: $box-radius;
     &::after {
       content: '';
       top: -8px;
@@ -82,8 +91,39 @@
       z-index: 1;
       height: 8px;
       background: white;
-      left: 30%;
-      right: 30%;
+      left: 32%;
+      right: 32%;
     }
+  }
+}
+
+.proyect-leaders {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: $grey-07;
+
+  &__title {
+    font-size: 65px;
+    span {
+      background-color: white;
+      border-radius: $box-radius;
+      padding: 5px 15px;
+      color: $blue;
+    }
+  }
+  &__sub-title {
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+  .leaders-box {
+    background-color: $grey-07;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: $box-radius;
+    width: 900px;
+    height: 560px;
   }
 }
