--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -71,27 +71,27 @@ select {
 a {
   text-decoration: none;
 }
-// * {
-//   outline: 2px dotted red;
-// }
-// * * {
-//   outline: 2px dotted green;
-// }
-// * * * {
-//   outline: 2px dotted orange;
-// }
-// * * * * {
-//   outline: 2px dotted blue;
-// }
-// * * * * * {
-//   outline: 1px solid red;
-// }
-// * * * * * * {
-//   outline: 1px solid green;
-// }
-// * * * * * * * {
-//   outline: 1px solid orange;
-// }
-// * * * * * * * * {
-//   outline: 1px solid blue;
-// }
+* {
+  outline: 2px dotted red;
+}
+* * {
+  outline: 2px dotted green;
+}
+* * * {
+  outline: 2px dotted orange;
+}
+* * * * {
+  outline: 2px dotted blue;
+}
+* * * * * {
+  outline: 1px solid red;
+}
+* * * * * * {
+  outline: 1px solid green;
+}
+* * * * * * * {
+  outline: 1px solid orange;
+}
+* * * * * * * * {
+  outline: 1px solid blue;
+}
