--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -8,11 +8,14 @@
   padding-top: 30px;
 }
 .text--disclousure {
-  background-color: red;
+  grid-column: 1/3;
 }
 .companies {
-  display: flex;
-  justify-content: space-around;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  justify-content: center;
   align-items: center;
 }
 .nav-box {
@@ -70,6 +73,5 @@
   }
 }
 .logo-img {
-  width: 40px;
   height: 40px;
 }
