--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -11,8 +11,10 @@
   grid-column: 1/3;
 }
 .companies {
+  text-align: center;
   margin: 0 auto;
   display: grid;
+  width: 100%;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   justify-content: center;
