--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,6 +1,7 @@
 @import '../../variables';
 
 .header {
+  position: sticky;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -24,7 +25,7 @@
 }
 
 .logo {
-  width: 60px;
-  height: 32px;
+  height: 90px;
+  width: auto;
   font-weight: bold;
 }
