--- a/src/global.scss
+++ b/src/global.scss
@@ -1,10 +1,14 @@
 @import './reset';
 @import './variables';
+html {
+  scroll-behavior: smooth;
+}
 
 body {
-  color: #fff;
+  color: $white;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 section {
