--- a/src/components/LeaderCard/styles.scss
+++ b/src/components/LeaderCard/styles.scss
@@ -16,7 +16,7 @@
   }
   &__profile-pic {
     margin: 0 auto 20px;
-    width: 7em;
-    height: 7em;
+    width: 130px;
+    height: 130px;
   }
 }
