--- a/src/global.scss
+++ b/src/global.scss
@@ -12,9 +12,9 @@ body {
 }
 
 section {
-  margin-bottom: 200px;
+  margin-bottom: 350px;
 }
 
 .wrapped {
-  padding: 0 50px;
+  padding: 0 1rem;
 }
