--- a/src/components/Main/styles.scss
+++ b/src/components/Main/styles.scss
@@ -2,8 +2,8 @@
 
 .hero {
   position: relative;
-  height: 130vh;
   z-index: 0;
+  margin-bottom: 0;
   .svg-hero {
     position: absolute;
     bottom: -1px;
@@ -44,21 +44,28 @@
   }
 }
 
+@media (max-width: 980px) {
+  .hero {
+    &__box {
+    }
+  }
+}
+
 // Todo considerar herencia de estilo del borde raro ese
 .about-us {
   position: relative;
   color: $black;
   font-size: 30px;
-  height: 60vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 300px;
   .purple-about-us {
-    height: 300px;
     position: absolute;
+    height: 10em;
     z-index: 0;
-    top: -300px;
-    left: 0;
+    top: -350px;
+    left: -25%;
   }
   .right-strokes {
     position: absolute;
@@ -98,26 +105,26 @@
 }
 
 .proyect-leaders {
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   position: relative;
+  padding-top: 100px;
   .purple-leaders {
     position: absolute;
-    height: 1300px;
+    height: 80rem;
     z-index: -1;
   }
   .blue-leaders {
     position: absolute;
-    height: 700px;
+    height: 50rem;
     z-index: -1;
   }
   .diamond-leaders {
     opacity: 0.5;
     position: absolute;
-    height: 1200px;
+    height: 70rem;
     z-index: -1;
   }
   &__title {
@@ -145,14 +152,16 @@
 }
 
 .best-proyects {
+  padding-top: 100px;
   text-align: center;
   position: relative;
+  margin-bottom: 200;
   .shapes-proyects {
     position: absolute;
     z-index: -1;
-    height: 800px;
+    height: 50rem;
     left: 100px;
-    top: 50px;
+    top: 15%;
   }
   &__title {
     font-size: 65px;
@@ -187,30 +196,30 @@
   position: relative;
   color: $black;
   font-size: 30px;
-  height: 60vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 250px;
+
   .left-forum {
     position: absolute;
     z-index: -1;
-    height: 400px;
-    left: 100px;
-    top: 200px;
+    height: 20rem;
+    left: -45%;
   }
   .right-forum {
     position: absolute;
-    z-index: -1;
-    height: 400px;
-    right: 300px;
-    top: -80px;
+    z-index: 0;
+    height: 20rem;
+    right: -30%;
+    top: -20%;
   }
   .bottom-strokes {
     position: absolute;
     z-index: -1;
     height: 1500px;
     right: -100px;
-    top: -700px;
+    top: -500px;
   }
   &__title {
     color: $purple;
@@ -253,5 +262,13 @@
     font-size: 30px;
     padding: 12px 30px;
     text-align: center;
+  }
+}
+
+@media (max-width: 1580px) {
+  .forum {
+    .bottom-strokes {
+      display: none;
+    }
   }
 }
