installed react pure

--- a/src/components/Main/styles.scss
+++ b/src/components/Main/styles.scss
@@ -1,5 +1,12 @@
 @import '../../variables';
 
+// .alice-carousel__stage {
+//   margin: 0 auto !important;
+// }
+// .alice-carousel__stage-item {
+//   margin: 0 auto !important;
+// }
+
 .hero {
   position: relative;
   z-index: 0;
