pseudo element fixed

--- a/src/components/LeaderCard/styles.scss
+++ b/src/components/LeaderCard/styles.scss
@@ -4,6 +4,7 @@
   color: $grey;
   font-size: 18px;
   text-align: center;
+  margin: 0 auto;
   width: 225px;
   &__details {
     padding: 15px 35px;
