--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,12 +1,12 @@
 @import '../../variables';
 
 .header {
-  position: sticky;
+  position: fixed;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  position: absolute;
   width: 100%;
   z-index: 1;
   &::before {
@@ -28,4 +28,13 @@
   height: 90px;
   width: auto;
   font-weight: bold;
+}
+
+@media (max-width: 700px) {
+  .header {
+    justify-content: center;
+  }
+  .logo {
+    height: 120px;
+  }
 }
