--- a/src/components/Hero/styles.scss
+++ b/src/components/Hero/styles.scss
@@ -1,12 +1,10 @@
 @import '../../variables';
 
-html {
-  font-size: 14px;
-}
 .hero {
   position: relative;
   z-index: 0;
   margin-bottom: 0;
+  text-align: right;
   .svg-hero {
     position: absolute;
     bottom: -1px;
@@ -24,13 +22,20 @@ html {
     justify-content: space-around;
     align-items: flex-end;
     z-index: 2;
-    text-align: right;
   }
   &__call-action {
     font-size: 2rem;
   }
   &__main-text {
     font-size: 4rem;
+    word-break: keep-all;
+    span {
+      background-color: white;
+      border-radius: 20px;
+      padding: 5px 15px;
+      font-weight: bold;
+      color: $purple;
+    }
   }
   &__btn {
     cursor: pointer;
@@ -41,15 +46,16 @@ html {
     border-radius: 50px;
     padding: 12px 30px;
   }
-  span {
-    font-weight: bold;
-    color: $purple;
-  }
 }
 
-@media (max-width: 980px) {
+@media (max-width: 700px) {
   .hero {
     &__box {
+      align-items: center;
+    }
+    text-align: center;
+    .br {
+      display: none;
     }
   }
 }
