--- a/src/components/AboutUs/styles.scss
+++ b/src/components/AboutUs/styles.scss
@@ -2,7 +2,7 @@
 .about-us {
   position: relative;
   color: $black;
-  font-size: 30px;
+  font-size: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,11 +23,12 @@
   }
   &__img {
     position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 250px;
-    height: 150px;
-    top: -80px;
+    width: 12.5rem;
+    height: 7.5rem;
+    left: 0;
+    right: 0;
+    top: -65px;
+    margin: 0 auto;
     z-index: 2;
   }
   &__text-box {
