--- a/src/components/BestProyects/styles.scss
+++ b/src/components/BestProyects/styles.scss
@@ -4,7 +4,6 @@
   padding-top: 100px;
   text-align: center;
   position: relative;
-  margin-bottom: 200;
   .shapes-proyects {
     position: absolute;
     z-index: -1;
@@ -13,7 +12,7 @@
     top: 15%;
   }
   &__title {
-    font-size: 65px;
+    font-size: 3.125rem;
     span {
       background-color: white;
       border-radius: $box-radius;
@@ -22,14 +21,14 @@
     }
   }
   &__sub-title {
-    font-size: 30px;
+    font-size: 1.5rem;
     margin-bottom: 20px;
   }
   .color-container {
     background-color: $blue-05;
     border-radius: 0 $box-radius $box-radius 0;
-
-    width: 1380px;
+    padding: 20px 0;
+    max-width: 1380px;
     height: 810px;
   }
   .proyects-box {
