--- a/src/components/ProyectCard/styles.scss
+++ b/src/components/ProyectCard/styles.scss
@@ -3,7 +3,7 @@
 .proyect-card {
   margin: 0 auto;
   color: $grey;
-  font-size: 18px;
+  font-size: 0.9;
   text-align: center;
   width: 225px;
 
@@ -11,7 +11,7 @@
     padding: 15px 35px;
     border-radius: $box-radius;
     background-color: $white-07;
-    font-size: 25px;
+    font-size: 1.25rem;
     margin-bottom: 20px;
   }
   &__picture {
@@ -20,6 +20,6 @@
     height: 256px;
   }
   &__info {
-    font-size: 20px;
+    font-size: 1rem;
   }
 }
