--- a/src/components/ProyectLeaders/styles.scss
+++ b/src/components/ProyectLeaders/styles.scss
@@ -1,12 +1,14 @@
 @import '../../variables';
 
 .proyect-leaders {
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   position: relative;
   padding-top: 100px;
+  min-height: 900px;
   .purple-leaders {
     position: absolute;
     height: 80rem;
@@ -21,10 +23,13 @@
     opacity: 0.5;
     position: absolute;
     height: 70rem;
+    min-height: 1000px;
     z-index: -1;
+    top: -50px;
+    max-width: none;
   }
   &__title {
-    font-size: 65px;
+    font-size: 3.25rem;
     span {
       background-color: white;
       border-radius: $box-radius;
@@ -33,17 +38,15 @@
     }
   }
   &__sub-title {
-    font-size: 30px;
+    font-size: 1.5rem;
     margin-bottom: 20px;
   }
   .leaders-box {
-    padding: 30px;
-    align-items: center;
     background-color: $grey-07;
     border-radius: $box-radius;
-    display: flex;
-    justify-content: space-evenly;
-    width: 100%;
     max-width: 900px;
+    min-height: 600px;
+    padding: 30px;
+    width: 100%;
   }
 }
