--- a/src/components/HeroSlider/styles.scss
+++ b/src/components/HeroSlider/styles.scss
@@ -3,6 +3,7 @@
   padding: 200px 250px 50px 50px;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   min-height: 1050px;
   display: flex;
   justify-content: flex-end;
