--- a/src/global.scss
+++ b/src/global.scss
@@ -2,13 +2,14 @@
 @import './variables';
 html {
   scroll-behavior: smooth;
+  overflow-x: auto;
 }
 
 body {
+  overflow-x: hidden;
   color: $white;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
 }
 
 section {
