--- a/src/components/HeroSlider/styles.scss
+++ b/src/components/HeroSlider/styles.scss
@@ -1,4 +1,3 @@
-@import '../../variables';
 .slider-hero {
   position: relative;
   padding: 200px 250px 50px 50px;
@@ -9,20 +8,19 @@
   z-index: 0;
 
   .slide {
-    opacity: 0;
+    opacity: 0.9;
+    transition: 0.5s ease;
   }
   .slide.active {
-    transition: 100ms ease;
-    position: absolute;
-
-    left: 0;
-    top: 0;
-    z-index: -1;
-
+    background-position: center;
+    background-size: cover;
     height: 100%;
     width: 100%;
-
+    left: 0;
     opacity: 1;
+    position: absolute;
+    top: 0;
+    z-index: -1;
   }
   &__btn {
     cursor: pointer;
