--- a/src/components/ProyectCard/styles.scss
+++ b/src/components/ProyectCard/styles.scss
@@ -15,6 +15,10 @@
     margin-bottom: 20px;
   }
   &__picture {
+    border-radius: $box-radius;
+    background-position: center;
+    object-fit: cover;
+    vertical-align: middle;
     margin: 0 auto 20px;
     width: 256px;
     height: 256px;
